button appearance fix on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@ section {
     padding: 1rem;
     width: 8rem;
     border-radius: 2rem;
+
 }
 
 .btn-color-1,
@@ -247,6 +248,14 @@ section {
 
 .btn-color-2:hover {
     border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-color-3 {
+    appearance: none;
+    -webkit-appearance: none;
+    pointer-events: none;
+    user-select: none;
+    cursor: default;
 }
 
 /* about section */
